<fix> небольшие исправления